下書きと清書を分ける

--- a/.env
+++ b/.env
@@ -1,21 +1,33 @@
 # -------------------------------------------
-# wordpress・mysqlコンテナの設定
+# WordPress
 # -------------------------------------------
 # プロダクトの名前 作成されるcontainer名の接頭語として使用
-PRODUCTION_NAME=
+PRODUCTION_NAME=wp_qs_test
 # local wordpressを紐付けるPort名（ex: 8080)
-LOCAL_SERVER_PORT=
-# localのmysqlを紐付けるPort名（ex: 3306)
-LOCAL_DB_PORT=
-
+LOCAL_SERVER_PORT=8080
+#
 # -------------------------------------------
-# wordmoveコンテナの設定
+# Local Database
 # -------------------------------------------
-# 全て本番環境の情報
+LOCAL_DB_HOST=database
+LOCAL_DB_PORT=3306
+MYSQL_USER=wordpress
+MYSQL_DATABASE=wordpress
+MYSQL_PASSWORD=wordpress
+MYSQL_ROOT_PASSWORD=wordpress
+#
+# -------------------------------------------
+# wordmove
+# -------------------------------------------
+#
+# - * - * - * - * - * - * - * - * - * - * - * -
+# PRODUCTION = 本番環境
+# - * - * - * - * - * - * - * - * - * - * - * -
 # URL
 PRODUCTION_URL=
 # wordpressのディレクトリの絶対パス
 PRODUCTION_DIR_PATH=
+#
 # DB名
 PRODUCTION_DB_NAME=
 # DBのユーザー名
@@ -26,9 +38,19 @@ PRODUCTION_DB_PASSWORD=
 PRODUCTION_DB_HOST=
 # DBの接続ポート
 PRODUCTION_DB_PORT=
-# SSHホスト名
-PRODUCTION_SSH_HOST=
-# SSHユーザー名
-PRODUCTION_SSH_USER=
-# SSHポート名
-PRODUCTION_SSH_PORT=
+#
+# FTPホスト名
+PRODUCTION_FTP_HOST=
+# FTPユーザー名
+PRODUCTION_FTP_USER=
+# FTPパスワード
+PRODUCTION_FTP_PASSWORD=
+# FTPSルート証明書URL
+PRODUCTION_FTPS_ROOT_CERT=https://letsencrypt.org/certs/isrgrootx1.pem.txt
+#
+# lftp-mirror
+FTP_HOST=ftp.example.com
+FTP_USER=user
+FTP_PASS=password
+FTP_SOURCE=/var/www/html
+FTP_TARGET=/path/to/public
